--- a/Style/style.css
+++ b/Style/style.css
@@ -8,7 +8,7 @@ form
 {
     display: inline-block;
     font-size: 1.2em;
-    width: 400px;
+    width: 500px;
     text-align: left;
     background-color: white;
     box-shadow: 0px 15px 20px #e5e5e5;
@@ -21,7 +21,7 @@ label
 }
 input, select
 {
-    margin: 10px 0px 10px 0px;
+    margin: 10px 0px 20px 0px;
     font-size: 1.1em;
     transition: 0.5s;
 }
@@ -77,4 +77,9 @@ button[type=reset]:hover
     border: 0px;
     color: white;
     cursor: pointer;
+}
+
+hr
+{
+    border-color: rgb(192, 192, 192);
 }
